--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="header">
     <div class="container">
       <nav>
-        <img src="image/Logo.png" class="logo">
+        <img src="./image/logo.png" class="logo">
         <ul id="sidemenu">
           <li><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
