--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <h1 class="sub-title">My Work</h1>
       <div class="work-list">
         <div class="work">
-          <img src="image/e-commerce.jpg">
+          <img src="./image/e-commerce.jpg">
           <div class="layer">
             <h3>E-commerce Platform</h3>
             <p>Full-stack e-commerce solution with React and Node.js</p>
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="work">
-          <img src="image/work-2.png">
+          <img src="./image/work-2.png">
           <div class="layer">
             <h3>Music App</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, nostrum?</p>
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="work">
-          <img src="image/work-3.png">
+          <img src="./image/work-3.png">
           <div class="layer">
             <h3>E-commerce Platform</h3>
             <p>Full-stack e-commerce solution with React and Node.js</p>
