--- a/index.html
+++ b/index.html
@@ -149,14 +149,20 @@
           <p> <i class="fa-solid fa-envelope"></i> tahsintabib408@gmail.com</p>
           <p> <i class="fa-solid fa-phone"></i>01572942318</p>
           <div class="social-icons">
+            
             <a href="https://www.facebook.com/tahsinaltabib.18" target="_blank"><i
                 class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.instagram.com/tahsin.al.tabib_18/" target="_blank"><i
+                
+            <a href="https://www.instagram.com/tahsinaltabib_18/" target="_blank"><i
                 class="fa-brands fa-instagram"></i></a>
-            <a href="https://x.com/tabib_r_18" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/tahsin-al-tabib-46734929b/" target="_blank"><i
+
+            <a href="https://x.com/tahsinaltabib" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+
+            <a href="https://www.linkedin.com/in/tahsinaltabib/" target="_blank"><i
                 class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/tabib18" target="_blank"><i class="fa-brands fa-github"></i></a>
+
+            <a href="https://github.com/tahsinaltabib" target="_blank"><i class="fa-brands fa-github"></i></a>
+
           </div>
           <a href="image/my-cv.pdf" download="" class="btn btn2">Download CV</a>
         </div>
