--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col-1">
-          <img class="img" src="image/photo copy.jpg">
+          <img class="img" src="image/img.jpg">
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
@@ -172,6 +172,7 @@
             <input type="email" name="Email" placeholder="Your Email" required>
             <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
             <button type="submit" class="btn btn2">Submit</button>
+
           </form>
           <span id="msg"></span>
         </div>
