--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       <div class="row">
         <div class="contact-left">
           <h1 class="sub-title">Contact me</h1>
-          <p> <i class="fa-solid fa-envelope"></i> tahsintabib408@gmail.com</p>
-          <p> <i class="fa-solid fa-phone"></i>01572942318</p>
+          <p> <i class="fa-solid fa-envelope"></i> tahsinaltabib@gmail.com</p>
+          <p> <i class="fa-solid fa-phone"></i>+8801572942318</p>
           <div class="social-icons">
             
             <a href="https://www.facebook.com/tahsinaltabib.18" target="_blank"><i
@@ -158,7 +158,7 @@
 
             <a href="https://x.com/tahsinaltabib" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
 
-            <a href="https://www.linkedin.com/in/tahsinaltabib/" target="_blank"><i
+            <a href="https://www.linkedin.com/in/tahsin-al-tabib/" target="_blank"><i
                 class="fa-brands fa-linkedin"></i></a>
 
             <a href="https://github.com/tahsinaltabib" target="_blank"><i class="fa-brands fa-github"></i></a>
